# cems

./: .env.example  .gitignore  .gitleaks.toml  COOLIFY_DEPLOYMENT.md  Dockerfile  ENHANCED_RETRIEVAL_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.coolify.yml  docker-compose.yml  findings.md  install.sh  mem0-tech-spec.md  plan-rag-pageindex.md  plan.md  progress.md  pyproject.toml  qmd_eval_results.json  remote-install.sh  research-main.md  research-progress.md  task_plan.md  task_plan_mmr.md  test_complex_memories.py  test_hooks.py  test_hooks_e2e.py  test_integration.py  test_performance.py
.github/workflows/: docker-publish.yml
claude-setup/: settings.json
claude-setup/hooks/: cems_stop.py  cems_user_prompts_submit.py
claude-setup/skills/cems/: context.md  remember.md
cursor-plugin/: CHANGELOG.md  README.md  mcp.json
cursor-plugin/.cursor-plugin/: plugin.json
cursor-plugin/hooks/: cems_gate_rules.py  cems_mcp_gate.py  cems_stop.py  hooks.json
cursor-plugin/rules/: cems-memory.mdc
cursor-setup/hooks/: cems_stop.py
deploy/: .env.example  client-config.example.json  docker-compose.yml  init.sql  setup-client.sh
docs/: API.md  ARCHITECTURE.md  CLIENT.md  DEPLOYMENT.md  INSTALL.md  USER_ONBOARDING.md  ollama-removal-plan.md  qmd-learnings-report.md  query-decomposition-research.md  reranker-bottleneck-solutions.md  supermemory-claude-code-article.md  team-setup-guide.md
docs/archive/: code-architecture-refactoring-plan.md  qmd-implementation-plan.md  retrieval-changes-analysis.md  user-profile-injection-plan.md  website-research.md
examples/: claude-md-cems.md  cursor-rules-cems.md  cursor_mcp_http.json  cursor_mcp_http_perproject.json  mcp_config.json  mcp_config_with_team.json
hooks/: cems_post_tool_use.py  cems_pre_compact.py  cems_pre_tool_use.py  cems_session_start.py  cems_stop.py  cems_user_prompts_submit.py  install.sh  pre_compact.py  pre_tool_use.py  stop.py  user_prompts_submit.py
hooks/utils/: credentials.py  hook_logger.py  observer_manager.py  project.py  transcript.py
mcp-wrapper/: Dockerfile  package-lock.json  package.json
mcp-wrapper/src/: index.ts
research/: mastra-observational-memory.md  observer-v2-multi-tool.md  option-d-observer-plan.md
scripts/: analyze_memories.py  backfill_docs_from_memories.py  cleanup_orphan_signals.py  export_production_memories.py  fix_reindex_updated_at.sql  migrate_conflicts.sql  migrate_docs_schema.sql  migrate_relations_fk.sql  migrate_relevance_feedback.sql  migrate_remote_to_local_768.sh  migrate_soft_delete_feedback.sql  migrate_to_pgvector.py  migrate_via_api.py  reembed_all_memories.py  start-native-embedder.sh  start-native-reranker.sh  sync-package-data.sh
skills/: remember.md  share.md
skills/cems-foundation/: SKILL.md
skills/cems-recall/: SKILL.md
skills/cems-remember/: SKILL.md
src/cems/: __init__.py  chunking.py  cli.py  cli_utils.py  client.py  config.py  embedding.py  fact_extraction.py  graph.py  llamacpp_server.py  llm.py  mcp_stdio.py  memory.py  models.py  pattern_extraction.py  retrieval.py  scheduler.py  server.py  tools.py  vectorstore.py
tests/: __init__.py  conftest.py  hook_harness.py  test_adapters.py  test_admin.py  test_config.py  test_dedup.py  test_document_store_shared.py  test_goose_adapter.py  test_hooks.py  test_hooks_integration.py  test_init_wiring.py  test_llm.py  test_longmemeval_e2e.py  test_maintenance.py  test_models.py  test_models_extended.py  test_observation.py  test_observation_reflector.py  test_observer.py  test_observer_manager.py  test_pattern_extraction.py  test_retrieval.py  test_rule_commands.py  test_scheduler.py  test_server.py  test_session_handler.py  test_signals.py  test_transcript.py  test_vectorstore.py
(+136 files in other folders)
