[project]
name = "cems"
version = "0.5.1"
description = "Continuous Evolving Memory System - Dual-layer memory with scheduled maintenance"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Razvan", email = "razvan@example.com" }
]
keywords = ["memory", "llm", "mcp", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "mcp>=1.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    # LLM clients
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",  # For embedding API calls
    # HTTP server dependencies
    "uvicorn>=0.30.0",
    "starlette>=0.35.0",
    # PostgreSQL + pgvector (unified storage)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",  # pgvector support for asyncpg
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.0",
    # httpx is used for llama.cpp server HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
cems = "cems.cli:main"
cems-server = "cems.server:run_server"
cems-observer = "cems.observer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cems"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
